2005-09-08  David Ponce  <david@dponce.com>

	* recentf.el (recentf-show-file-shortcuts-flag): New option.
	(recentf-expand-file-name): Doc fix.
	(recentf-dialog-mode-map): Define digit shortcuts.
	(recentf--files-with-key): New variable.
	(recentf-show-digit-shortcut-filter): New function.
	(recentf-open-files-items): New function.
	(recentf-open-files): Use it.
	(recentf-open-file-with-key): New command.

2005-09-07  Michael Albinus  <michael.albinus@gmx.de>

	* woman.el (top): Remap `man' command by `woman' in
	`woman-mode-map'.
	(Man-getpage-in-background-advice): Remove defadvice; it isn't
	necessary any longer with the remapped command.
	(Man-bgproc-sentinel-advice): Remove defadvice which counts
	formatting time only.

	* net/tramp.el (tramp-action-password)
	(tramp-multi-action-password): Compile the password prompt from
	`method', `user' and `host'.  Sometimes it isn't obvious which
	password to enter, for example with remote files offered by
	recentf.el, or with multiple steps.  Suggested by Robert Marshall
	<robert@chezmarshall.freeserve.co.uk>.

2005-09-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/perl-mode.el (perl-font-lock-syntactic-keywords):
	Fix regexp for when "s///" is at the beginning of line.

2005-09-07  Jay Belanger  <belanger@truman.edu>

	* calc/calc-poly.el (math-expand-term): Multiply out any powers
	when in matrix mode.

2005-09-08  Chong Yidong  <cyd@stupidchicken.com>

	* buff-menu.el (Buffer-menu-sort-by-column): New function.
	Suggested by Kim F. Storm.
	(Buffer-menu-sort-button-map): Global keymap for sort buttons.
	(Buffer-menu-make-sort-button): Use global keymap.

2005-09-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* buff-menu.el (Buffer-menu-make-sort-button): Add docstrings, use
	non-anonymous functions.

2005-09-06  Chong Yidong  <cyd@stupidchicken.com>

	* buff-menu.el (Buffer-menu-make-sort-button): Allow mouse-1 clicks
	when using a header line.  Otherwise, use mouse-1-click-follows-link.
